# Realsense_project

./: README.md
lbr_arithmetic_average_roughness/: CMakeLists.txt  package.xml
lbr_arithmetic_average_roughness/config/: arithmetic_average_roughness.rviz
lbr_arithmetic_average_roughness/include/: lbr_arithmetic_average_roughness.h  visibility_control.h
lbr_arithmetic_average_roughness/include/lbr_arithmetic_average_roughness/: lbr_arithmetic_average_roughness.hpp
lbr_arithmetic_average_roughness/launch/: lbr_arithmetic_average_roughness.launch.py
lbr_arithmetic_average_roughness/src/: lbr_arithmetic_average_roughness.cpp  lbr_arithmetic_average_roughness_node.cpp
lbr_arithmetic_average_roughness/test/: unit_test_lbr_arithmetic_average_roughness.cpp
lbr_arithmetic_average_roughness/urdf/: dummy_robot.urdf
lbr_normal_analysis_roughness/: CMakeLists.txt  package.xml
lbr_normal_analysis_roughness/config/: lbr_normal_analysis_roughness.rviz
lbr_normal_analysis_roughness/include/lbr_normal_analysis_roughness/: lbr_normal_analysis_roughness.hpp  visibility_control.h
lbr_normal_analysis_roughness/launch/: lbr_normal_analysis_roughness.py
lbr_normal_analysis_roughness/src/: lbr_normal_analysis_roughness.cpp  lbr_normal_analysis_roughness_node.cpp
lbr_normal_analysis_roughness/test/: unit_test_lbr_normal_analysis_roughness.cpp
lbr_pointcloud_extractor/: CMakeLists.txt  package.xml
lbr_pointcloud_extractor/include/lbr_pointcloud_extractor/: lbr_pointcloud_extractor.hpp  visibility_control.h
lbr_pointcloud_extractor/launch/: lbr_pointcloud_extractor.launch.py
lbr_pointcloud_extractor/src/: lbr_pointcloud_extractor.cpp  lbr_pointcloud_extractor_node.cpp
lbr_pointcloud_extractor/test/: unit_test_lbr_pointcloud_extractor.cpp
lbr_terrain_analysis/: CMakeLists.txt  README.md  package.xml
lbr_terrain_analysis/include/lbr_terrain_analysis/: lbr_terrain_analysis.hpp  visibility_control.h
lbr_terrain_analysis/launch/: lbr_terrain_analysis.launch.py
lbr_terrain_analysis/src/: lbr_terrain_analysis.cpp  lbr_terrain_analysis_node.cpp
lbr_terrain_analysis/test/: unit_test_lbr_terrain_analysis.cpp
terrain_analysis_pkg/: CMakeLists.txt  README.md  package.xml
terrain_analysis_pkg/include/: terrain_roughness.hpp
terrain_analysis_pkg/include/terrain_analysis_pkg/: terrain_roughness.hpp  visibility_control.h
terrain_analysis_pkg/launch/: terrain_analysis.launch.py
terrain_analysis_pkg/src/: terrain_roughness.cpp
terrain_analysis_pkg/utils/: video_to_image.py
