<?xml version="1.0"?>
<package format="3">
    <name>terrain_analysis_pkg</name>
    <version>1.0.0</version>
    <description>Terrain roughness analysis using PCL</description>
    <maintainer email="matsuura.yudai.q5@dc.tohoku.ac.jp">Yudai matsuura</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>ament_cmake_auto</depend>
    <depend>rclcpp</depend>
    <depend>sensor_msgs</depend>
    <depend>pcl_conversions</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
